<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.gucheng.myappcollection.MainActivity">

    <LinearLayout android:id="@+id/hello_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="serif-monospace"
            android:textColor="@android:color/black"
            android:text="@string/hello_world" />

    </LinearLayout>


    <Button android:id="@+id/app_zero"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        style="@style/ButtonOfApps"
        android:text="@string/app_zero_name"
        android:layout_below="@+id/hello_layout"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/app_one"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_zero"
        style="@style/ButtonOfApps"
        android:text="@string/app_one_name" />

    <Button android:id="@+id/app_two"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_one"
        style="@style/ButtonOfApps"
        android:text="@string/app_two_name" />

    <Button android:id="@+id/app_three"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_two"
        style="@style/ButtonOfApps"
        android:text="@string/app_three_name" />

    <Button android:id="@+id/app_four"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_three"
        style="@style/ButtonOfApps"
        android:text="@string/app_four_name" />

</RelativeLayout>
